fixed button overflow

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -298,7 +298,7 @@
 	font-size: 1rem;
 	cursor: pointer;
 	padding: 10%;
-	margin: 5px auto;
+	margin: 1% auto;
 }
 
 .stats-button-mobile {
